[project]
name = "epics-docs"
version = "0.1.0"
description = "EPICS documentation located on https://docs.epics-controls.org/"
readme = "README.md"
requires-python = ">= 3.11, < 4.0"
dependencies = [
	"sphinx (>=8.2.3,<9.0.0)",
	"myst-parser (>=4.0.1,<5.0.0)",
	"sphinx-copybutton (>=0.5.2,<0.6.0)",
	"sphinx-rtd-theme (>=3.0.2,<4.0.0)",
	"sphinx-autobuild (>=2025.8.25,<2026.0.0)",
	"sphinx-reredirects (>=1.0.0,<2.0.0)",
	"sphinx-design (>=0.6.1,<0.7.0)",
]

[[project.authors]]
name = "epics-docs contributors"

[tool.setuptools]
# For pip / setuptools, don't assume we're producing a Python package
packages = []
